added nav bar function & minimal style, created webpage color pallete, added missing headings in html

--- a/index.html
+++ b/index.html
@@ -11,35 +11,41 @@
 <body>
 <!-- ## NAVIGATION BAR ## -->
    <nav>
-    <ul>
-        <li>About Me</li>
-        <li>My Work</li>
-        <li>Contact Me</li>
+    <ul class="nav-bar">
+        <li><a href="#about-me">About Me</a></li>
+        <li><a href="#my-work">My Work</a></li>
+        <li><a href="#contact-me">Contact Me</a></li>
     </ul>
    </nav>
    <!-- ## MAIN CONTENT ## -->
    <main>
     <!-- ## ABOUT ME SECTION ## -->
-        <section>
+        <section id="about-me">
             <!-- Include: heading, recent pic of me, about me paragraph -->
             <h1>Hannah Alverson</h1>
+            <figure>
+                <img src="" alt="">
+            </figure>
+            <h2>About Me</h2>
             <!-- ## LIFE DREAM ## aside (on right of about me)-->
             <aside>
+                <h3>My Dream:</h3>
                 <!-- Include: heading & bullet list -->
             </aside>
         </section>
     <!-- ## MY WORK SECTION ## -->
-        <section>
-            <h1>My Work</h1>
+        <section id="my-work">
+            <h2>My Work</h2>
             <!-- Include: 3 projects w/ the first being the largest -->
             <!-- Have the pictures be links to the projects -->
         </section>
     <!-- ## CONTACT ME SECTION ## -->
-        <section>
+        <section id="contact-me">
             <!-- Include: first name, last name, email form -->
             <h2>Contact Me</h2>
             <!-- ## SOCIAL MEDIA LINKS ## aside (on left of contact me) -->
             <aside>
+                <h3>Social Links</h3>
                 <!-- Include: linkedin, github, & emails (as icons) -->
             </aside>
         </section>
