added img directory w/ img of me, changed webpage color palette, added little styling to about-me section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- Include: heading, recent pic of me, about me paragraph -->
             <h1>Hannah Alverson</h1>
             <figure>
-                <img src="" alt="">
+                <img src="./assets/images/hannah-img.jpeg" alt="Me sitting on a rock">
             </figure>
             <h2>About Me</h2>
             <!-- ## LIFE DREAM ## aside (on right of about me)-->
