added square img for easier styling, added basic styling to first section in main, added more webpage content in html file

--- a/index.html
+++ b/index.html
@@ -1,58 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hannah's Professional Portfolio</title>
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-<!-- ## NAVIGATION BAR ## -->
-   <nav>
-    <ul class="nav-bar">
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <!-- ## NAVIGATION BAR ## -->
+    <nav>
+      <ul class="nav-bar">
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#my-work">My Work</a></li>
         <li><a href="#contact-me">Contact Me</a></li>
-    </ul>
-   </nav>
-   <!-- ## MAIN CONTENT ## -->
-   <main>
-    <!-- ## ABOUT ME SECTION ## -->
-        <section id="about-me">
-            <!-- Include: heading, recent pic of me, about me paragraph -->
-            <h1>Hannah Alverson</h1>
-            <figure>
-                <img src="./assets/images/hannah-img.jpeg" alt="Me sitting on a rock">
-            </figure>
-            <h2>About Me</h2>
-            <!-- ## LIFE DREAM ## aside (on right of about me)-->
-            <aside>
-                <h3>My Dream:</h3>
-                <!-- Include: heading & bullet list -->
-            </aside>
-        </section>
-    <!-- ## MY WORK SECTION ## -->
-        <section id="my-work">
-            <h2>My Work</h2>
-            <!-- Include: 3 projects w/ the first being the largest -->
-            <!-- Have the pictures be links to the projects -->
-        </section>
-    <!-- ## CONTACT ME SECTION ## -->
-        <section id="contact-me">
-            <!-- Include: first name, last name, email form -->
-            <h2>Contact Me</h2>
-            <!-- ## SOCIAL MEDIA LINKS ## aside (on left of contact me) -->
-            <aside>
-                <h3>Social Links</h3>
-                <!-- Include: linkedin, github, & emails (as icons) -->
-            </aside>
-        </section>
-   </main>
-   <!-- ## FOOTER SECTION ## -->
-   <footer>
-    <!-- Include: thanks & check box to show thank you gif-->
-   </footer>
-</body>
+      </ul>
+    </nav>
+    <!-- ## MAIN CONTENT ## -->
+    <main>
+      <!-- ## ABOUT ME SECTION ## -->
+      <section id="about-me">
+        <!-- Include: heading, recent pic of me, about me paragraph -->
+        <div class="div-left">
+          <h1>Hannah Alverson</h1>
+          <figure>
+            <img
+              src="./assets/images/hannah-square.jpeg"
+              alt="Me sitting on a rock"
+            />
+          </figure>
+        </div>
+        <div class="div-right">
+          <h2>About Me</h2>
+          <p>
+            My name is Hannah and I am currently a student in the University of
+            Denver Coding Boot Camp. Currently, I have a B.S. degree in
+            Nutritional Sciences with a minor in Sustainable Agriculture and
+            Food Systems from Michigan State University. My decision to pursue a
+            software development career path came from a life-long interest in
+            computers. Fun fact: My 5th grade science fair project was a website
+            created with HTML!
+          </p>
+        </div>
+      </section>
+
+      <!-- ## MY WORK SECTION ## -->
+      <section id="my-work">
+        <h2>My Work</h2>
+        <!-- Include: 3 projects w/ the first being the largest -->
+        <!-- Have the pictures be links to the projects -->
+      </section>
+      <!-- ## CONTACT ME SECTION ## -->
+      <section id="contact-me">
+        <!-- Include: first name, last name, email form -->
+        <h2>Contact Me</h2>
+        <!-- ## SOCIAL MEDIA LINKS ## aside (on left of contact me) -->
+        <aside>
+          <h3>Social Links</h3>
+          <!-- Include: linkedin, github, & emails (as icons) -->
+        </aside>
+      </section>
+    </main>
+    <!-- ## FOOTER SECTION ## -->
+    <footer>
+      <!-- Include: thanks & check box to show thank you gif-->
+    </footer>
+  </body>
 </html>
