more styling for section one main, added more webpage content & removed aside from 1st section

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             Nutritional Sciences with a minor in Sustainable Agriculture and
             Food Systems from Michigan State University. My decision to pursue a
             software development career path came from a life-long interest in
-            computers. Fun fact: My 5th grade science fair project was a website
-            created with HTML!
+            computers. My dream is to combine my B.S. degree knowledge with my new software development skills to create an application to help people be healthier. <div class="fun-fact">Fun fact: My 5th grade science fair project was a website
+            created with HTML!</div>
           </p>
         </div>
       </section>
