added content for contact me section: created inputs & labels

--- a/index.html
+++ b/index.html
@@ -65,8 +65,23 @@
       </section>
       <!-- ## CONTACT ME SECTION ## -->
       <section id="contact-me">
-        <!-- Include: first name, last name, email form -->
         <h2>Contact Me</h2>
+        <!-- Full name input -->
+        <p>
+          <label for="name"> Full Name:</label>
+          <input id="name" type="text" placeholder="Fist Last">
+        </p>
+        <!-- Email input -->
+        <p>
+          <label for="email"> Email:</label>
+          <input id="email" type="email" placeholder="someone@example.com">
+        </p>
+        <!-- Message input -->
+        <p>
+          <label for="message"> Message:</label>
+          <textarea id="message" type="text" placeholder="Type your message here" rows="5" cols="40"></textarea>
+        </p>
+        <button>Submit</button>
         <!-- ## SOCIAL MEDIA LINKS ## aside (on left of contact me) -->
         <aside>
           <h3>Social Links</h3>
