added awesome font link & social media content, made basic layout & styling for social media content in css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hannah's Professional Portfolio</title>
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+   <link rel="stylesheet" href="./assets/css/style.css" />
+    
   </head>
   <body>
     <!-- ## NAVIGATION BAR ## -->
@@ -96,16 +98,19 @@
           </p>
               <button>Submit</button>
         </section>
-      <!-- ## SOCIAL MEDIA LINKS ## aside (on left of contact me) -->
-        <aside>
+      <!-- ## SOCIAL MEDIA LINKS ## aside (on right of contact me) -->
+        
+        <section class="aside">
           <h3>Social Links</h3>
-            <!-- Include: linkedin, github, & emails (as icons) -->
-        </aside>
+          <a href="www.linkedin.com/in/hannah-alverson-5a7892183" target="_blank" class="fa fa-linkedin"></a>  
+          <a href="https://github.com/alverson98" target="_blank" class="fa fa-github"></a>
+          <a href="#" target="_blank" class="fa fa-envelope"></a>
+        </section>
     </div>
     </main>
     <!-- ## FOOTER SECTION ## -->
     <footer>
-      <!-- Include: thanks & check box to show thank you gif-->
+      <p>Thank you for visiting!!</p>
     </footer>
   </body>
 </html>
