added boot camp project one with description and photo as link to deployed page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
           <p>My first webpage created for the DU boot camp- Dedicated to my favorite band, Glass Animals.</p>
         </div>
         <div class="project">
+          <h3>FiHub - Finance Aggregator</h3>
+          <a href="https://ehren-lewis.github.io/FiHub/" target="_blank"><img src="./assets/images/fiHubLanding.png" alt="screenshot of FiHub home webpage"></a>
+          <p>A collaborative project featuring HTML, CSS, and JavaScript. This had the main goal of applying these newly learned skills to create an original, full functional, application.</p>
+        </div>
+        <div class="project">
           <h3>Horiseon- Refactoring Code</h3>
           <a href="https://alverson98.github.io/horiseon-mock-up/" target="_blank"><img src="./assets/images/Horiseon-screenshot.png" alt="screenshot of Horiseon webpage"></a>
           <p>A project that required HTML and CSS code to be refactored to be more efficient and meet accessibilty standards.</p>
